# CMakeDemo

Demo1/: CMakeCache.txt  CMakeLists.txt  Demo  Makefile  cmake_install.cmake  main.c
Demo1/math/: CMakeLists.txt  Makefile  cmake_install.cmake  library.h
Demo2/: CMakeLists.txt  main.c
Demo2/math/: Makefile  library.c
Demo3/: CMakeLists.txt  config.h.in  runDemo.sh
Demo3/src/: CMakeLists.txt
Demo3/src/math/: CMakeLists.txt
Demo3/src/test/: test.c
Demo4/: CMakeLists.txt
Demo4/math/: CMakeLists.txt  library.h
Demo5/: CMakeLists.txt
Demo5/src/: CMakeLists.txt  main.c
Demo6/: CMakeLists.txt  README
Demo6/src/: CMakeLists.txt  config.h
Demo7/: CMakeLists.txt  COPYRIGHT
Demo7/doc/: Demo.txt
Demo7/src/: .CMakeLists.txt.swp  CMakeLists.txt  a.txt  config.h  hello  hello.bak
Demo7/test/: CMakeLists.txt
Find/: CMakeLists.txt
Find/src/: CMakeLists.txt  main.c
utils/: CMakeLists.txt  config.h.in
utils/util/: CMakeLists.txt  README
